--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>OmicCoin - Personalized medicine on the blockchain</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="assets/css/featherlight.min.css" type="text/css" rel="stylesheet" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
@@ -122,24 +123,35 @@
             <h2>The Team</h2>
             <div class="row">
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/AndyPark.jpg">
-                <p>Andy</p>
+                <a href="#" data-featherlight="<p>Andy Park founded OmicCoin as an extension of his PhD thesis. In speaking with luminaries in the personalized medicine industry, he realized the Blockchain could solve many of the security and data aggregation issues that are impeding its growth. By assembling a team of world-class technologists, scientists and business development professionals, he is confident OmicCoin can revolutionize the way public and private healthcare entities operate today. Andy provides operational and business development leadership for OmicCoin and is tremendously grateful for the support he has received from academic and private institutions through the US and Canada.</p>">
+                  <img class="headshot" src="images/people/AndyPark.jpg">
+                  <p>Andy</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/LukeCyca.jpg">
-                <p>Luke</p>
+                <a href="#" data-featherlight="<p>Luke Cyca is the technology lead at OmicCoin. Luke served as Senior Systems Architect at Zymeworks Inc., a computational pharmaceutical company developing antibody and protein therapeutics. At Zymeworks, Luke was the lead
+developer of a Laboratory Information Management System (LIMS) used to manage protein sequence information.</p>">
+                  <img class="headshot" src="images/people/LukeCyca.jpg">
+                  <p>Luke</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/JeremyMullin.jpg">
-                <p>Jeremy</p>
+                <a href="#" data-featherlight="<p>Jeremy Mullin is a strategist, business development leader, guest speaker, and a trusted expert in the field of strategic insights. Currently he serves as Director, Business Development at Research Now Inc., a global leader in digital data collection, where he advises and supports leading Fortune 1000 enterprises. He is a Certified Marketing Research Professional (CMRP), serves as Board Director and Events Chair for the Toronto Chapter of the Marketing Research and Intelligence Association (MRIA) and is a member of the Data Science Association (DSA).</p>">
+                  <img class="headshot" src="images/people/JeremyMullin.jpg">
+                  <p>Jeremy</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/MattBrascia.jpg">
-                <p>Matt</p>
+                <a href="#" data-featherlight="<p>Matt Brascia contributes digital marketing expertise to OmicCoin. He has over 10 years of professional experience creating and producing digital content.</p>">
+                  <img class="headshot" src="images/people/MattBrascia.jpg">
+                  <p>Matt</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/TimGalebach.jpg">
-                <p>Tim</p>
+                <a href="#" data-featherlight="<p>Tim Galebach is a startup founder, technical expert, and business development specialist, with a focus on data-driven ventures and automated infrastructure. Timothy graduated from Harvard University in 2007, with a degree in Computer Science, and went on to work with a variety of startups and established companies in CTO roles. His primary focus was making large amounts of data visualizable and actionable for salespeople and internal business teams, and eliminating cost centers through aggressive optimization and automated data orchestration.</p>">
+                  <img class="headshot" src="images/people/TimGalebach.jpg">
+                  <p>Tim</p>
+                </a>
               </div>
             </div>
           </div>
@@ -149,28 +161,41 @@
             <h2>Advisory Group</h2>
             <div class="row">
               <div class="person 4u 6u(narrow)">
+                <a href="#" data-featherlight="<p>Marco Gallo is currently an Assistant Professor at the University of Calgary and runs the Gallo Lab, which studies the epigenomes of pediatric and adult brain tumors. His interest in the epigenome stems from his discovery that chromatin architecture specifies cell behavior, including the key cancer property known as self-renewal. Self-renewing cells are thought to be the root cause of tumor recurrence, because they can contribute to propagation of the malignant cell population indefinitely.</p>">
                 <img class="headshot" src="images/people/MarcoGallo.jpg">
                 <p>Marco Gallo, PhD</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/AllanMah.jpg">
-                <p>Allan Mah, PhD</p>
+                <a href="#" data-featherlight="<p>Allan Mah is a research and business professional with over a decade of experience in biomedical research, market analysis and biotech with a well-rounded portfolio of managing, executing and evaluating numerous product launches, marketing projects, programs and campaigns. He has pioneered research identifying the transcription factor that causes silencing of aquaporin gene expression using the C. elegans model through the Dr. David Baillie lab at Simon Fraser University.</p>">
+                  <img class="headshot" src="images/people/AllanMah.jpg">
+                  <p>Allan Mah, PhD</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/CurtisManning.jpg">
-                <p>Curtis Manning, MD</p>
+                <a href="#" data-featherlight="<p>Dr. Curtis Manning contributes patient-oriented expertise to OmicCoin. He completed his medical education at the University of British Columbia following his degree in Kinesiology and Biomedical Physiology at Simon Fraser University. He subsequently completed his Family Practice Residency at the University of Calgary. He is also a premier professional lacrosse player for the Calgary Roughnecks of the National Lacrosse League.</p>">
+                  <img class="headshot" src="images/people/CurtisManning.jpg">
+                  <p>Curtis Manning, MD</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/DanielBacinello.jpg">
-                <p>Daniel Bacinello, PhD</p>
+                <a href="#" data-featherlight="<p>Daniel Bacinello is a manager of research and business development at Ontario Genomics. In this role, he provides management support to funded research projects works with academic and industry partners in developing strong funding applications for large-scale genomics research.</p>
+<p>Daniel earned his PhD in Nanotechnology jointly from the University of Waterloo and the University of Bordeaux focusing on the development of hybrid polymer-peptide nano-vesicles for tumor-targeted drug delivery.</p>">
+                  <img class="headshot" src="images/people/DanielBacinello.jpg">
+                  <p>Daniel Bacinello, PhD</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/JaredBowie.jpg">
-                <p>Jared Bowie</p>
+                <a href="#" data-featherlight="<p>Jared Bowie has been designing systems to coordinate distributed databases and peer to peer networks for more than 10 years. Jared graduated from James Madison University with a major in philosophy. After graduation, obsessed with the convergence of big data and display advertising, he started his first digital advertising venture. Since then, Jared has written specialized software and proprietary algorithms to run successful multimillion dollar ad campaigns and manage remote teams based in Hong Kong, mainland China and India.</p>">
+                  <img class="headshot" src="images/people/JaredBowie.jpg">
+                  <p>Jared Bowie</p>
+                </a>
               </div>
               <div class="person 4u 6u(narrow)">
-                <img class="headshot" src="images/people/MichaelChin.jpg">
-                <p>Michael Chin</p>
+                <a href="#" data-featherlight="<p>Michael Chin graduated from Washington University in St. Louis magna cum laude with majors in Finance and Accounting. He has spent his entire career in the credit industry, beginning with J.P. Morgan’s principal mezzanine credit group in New York. Michael then transferred to JPM’s Debt Capital Markets and Syndicated Leveraged Finance group in Hong Kong, helping Asian issuers with Investment Grade, High Yield debt, and syndicated loan offerings.</p>">
+                  <img class="headshot" src="images/people/MichaelChin.jpg">
+                  <p>Michael Chin</p>
+                </a>
               </div>
             </div>
           </div>
@@ -213,6 +238,7 @@
 
     <!-- Scripts -->
       <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
       <script src="assets/js/jquery.scrolly.min.js"></script>
       <script src="assets/js/skel.min.js"></script>
       <script src="assets/js/util.js"></script>
