--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
                 </section>
               </div>
             </div>
+            <div class="row">
+             <div class="12u">
+              <footer>
+                <a href="whitepaper.pdf" class="button scrolly"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Read the whitepaper</a>
+              </footer>
+            </div>
+           </div>
           </div>
         </div>
       </section>
@@ -114,12 +121,6 @@
           <div class="container">
             <h2>The Team</h2>
             <div class="row">
-              <div class="person 4u 6u(narrow) 12u(mobile)">
-                <a href="#" data-featherlight="<p>Andy Park founded OmicCoin as an extension of his PhD thesis. In speaking with luminaries in the personalized medicine industry, he realized the Blockchain could solve many of the security and data aggregation issues that are impeding its growth. By assembling a team of world-class technologists, scientists and business development professionals, he is confident OmicCoin can revolutionize the way public and private healthcare entities operate today. Andy provides operational and business development leadership for OmicCoin and is tremendously grateful for the support he has received from academic and private institutions through the US and Canada.</p>">
-                  <img class="headshot" src="images/people/AndyPark.jpg">
-                  <p>Andy</p>
-                </a>
-              </div>
               <div class="person 4u 6u(narrow) 12u(mobile)">
                 <a href="#" data-featherlight="<p>Luke Cyca is the technology lead at OmicCoin. Luke served as Senior Systems Architect at Zymeworks Inc., a computational pharmaceutical company developing antibody and protein therapeutics. At Zymeworks, Luke was the lead
 developer of a Laboratory Information Management System (LIMS) used to manage protein sequence information.</p>">
