add new bios, change to coral health

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>OmicCoin - Personalized medicine on the blockchain</title>
+    <title>Coral Health - Personalized medicine on the blockchain</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="assets/css/featherlight.min.css" type="text/css" rel="stylesheet" />
@@ -38,7 +38,10 @@
               <div class="6u 12u(narrow)"></div>
               <div class="6u 12u(narrow)">
                 <h1>Our mission is to accelerate the uptake of personalized medicine.</h1>
-                <p><br><br>Fueled by decentralized ledger technologies, OmicCoin aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
+		<p style="text-align:center">
+                  <br><img src="images/youtube-embed.jpg" width=290 height=170>
+                </p>
+                <p><br><br>Fueled by decentralized ledger technologies, Coral Health aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
 
               </div>
             </div>
@@ -122,7 +125,7 @@
             <h2>The Team</h2>
             <div class="row">
               <div class="person 4u 6u(narrow) 12u(mobile)">
-                <a href="#" data-featherlight="<p>Luke Cyca is the technology lead at OmicCoin. Luke served as Senior Systems Architect at Zymeworks Inc., a computational pharmaceutical company developing antibody and protein therapeutics. At Zymeworks, Luke was the lead
+                <a href="#" data-featherlight="<p>Luke Cyca is the technology lead at Coral Health. Luke served as Senior Systems Architect at Zymeworks Inc., a computational pharmaceutical company developing antibody and protein therapeutics. At Zymeworks, Luke was the lead
 developer of a Laboratory Information Management System (LIMS) used to manage protein sequence information.</p>">
                   <img class="headshot" src="images/people/LukeCyca.jpg">
                   <p>Luke</p>
@@ -135,9 +138,21 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
                 </a>
               </div>
               <div class="person 4u 6u(narrow) 12u(mobile)">
-                <a href="#" data-featherlight="<p>Matt Brascia contributes digital marketing expertise to OmicCoin. He has over 10 years of professional experience creating and producing digital content.</p>">
+                <a href="#" data-featherlight="<p>Matt Brascia contributes digital marketing expertise to Coral Health. He has over 10 years of professional experience creating and producing digital content.</p>">
                   <img class="headshot" src="images/people/MattBrascia.jpg">
                   <p>Matt</p>
+                </a>
+              </div>
+              <div class="person 4u 6u(narrow) 12u(mobile)">
+                <a href="#" data-featherlight="<p>Nikola Grcevski draws upon years of deep technical expertise gained while working in various engineering and leadership positions at IBM. As part of the compiler and runtime technology group, he worked directly with numerous Fortune 500 companies in the financial and online retail industries, helping them achieve scale and drive forward their application performance. Nikola led a team in Toronto and Shanghai focused on Java runtime optimization for the Intel architecture, directing the product performance and shaping future middleware offerings. Nikola has filed thirteen software patents, and has been awarded a high value patent award for his work on runtime memory optimization.</p>">
+                  <img class="headshot" src="images/people/Nick.jpg">
+                  <p>Nick</p>
+                </a>
+              </div>
+              <div class="person 4u 6u(narrow) 12u(mobile)">
+                <a href="#" data-featherlight="<p>Philip Galebach is currently a Senior Research Associate at athenahealth. He has led multiple critical data studies that have been used in the commercialization decisions of the biggest pharmaceutical companies in the world. His health economics and outcomes studies include research on long-term molecular responses to nilotinib and dasatinib for newly diagnosed chronic myeloid leukemia. A graduate of Harvard University, he heads the data science function at Coral Health.</p>">
+                  <img class="headshot" src="images/people/Phil.jpg">
+                  <p>Phil</p>
                 </a>
               </div>
               <div class="person 4u 6u(narrow) 12u(mobile)">
@@ -166,7 +181,7 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
                 </a>
               </div>
               <div class="person 4u 6u(narrow) 12u(mobile)">
-                <a href="#" data-featherlight="<p>Dr. Curtis Manning contributes patient-oriented expertise to OmicCoin. He completed his medical education at the University of British Columbia following his degree in Kinesiology and Biomedical Physiology at Simon Fraser University. He subsequently completed his Family Practice Residency at the University of Calgary. He is currently a family physician at Rockford Medical Clinic in Calgary. He is also a standout professional lacrosse player for the Calgary Roughnecks of the National Lacrosse League.</p>">
+                <a href="#" data-featherlight="<p>Dr. Curtis Manning contributes patient-oriented expertise to Coral Health. He completed his medical education at the University of British Columbia following his degree in Kinesiology and Biomedical Physiology at Simon Fraser University. He subsequently completed his Family Practice Residency at the University of Calgary. He is currently a family physician at Rockford Medical Clinic in Calgary. He is also a standout professional lacrosse player for the Calgary Roughnecks of the National Lacrosse League.</p>">
                   <img class="headshot" src="images/people/CurtisManning.jpg">
                   <p>Curtis Manning, MD</p>
                 </a>
@@ -223,7 +238,7 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
         </ul>
         <div class="copyright">
           <ul class="menu">
-            <li>&copy; OmicCoin Inc. All rights reserved.</li><li>Website design based on <a href="http://html5up.net">HTML5 UP</a>.</li>
+            <li>&copy; Coral Health Inc. All rights reserved.</li><li>Website design based on <a href="http://html5up.net">HTML5 UP</a>.</li>
           </ul>
         </div>
       </section>
