change supporters section to blog

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
               <div class="6u 12u(narrow)">
                 <h1>Our mission is to accelerate the uptake of personalized medicine.</h1>
 		<p style="text-align:center">
-                  <br><img src="images/youtube-embed.jpg" width=290 height=170>
+		<iframe height=220 src="https://www.youtube.com/embed/WUQ_qVe9HGQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		<!-- <br><img src="images/youtube-embed.jpg" width=290 height=170> -->
                 </p>
                 <p><br><br>Fueled by decentralized ledger technologies, Coral Health aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
 
@@ -111,7 +112,7 @@
             <div class="row">
              <div class="12u">
               <footer>
-                <a href="whitepaper.pdf" class="button scrolly"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Read the whitepaper</a>
+                <a target="_blank" href="whitepaper.pdf" class="button scrolly"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Read the whitepaper</a>
               </footer>
             </div>
            </div>
@@ -212,16 +213,31 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
       <section id="supporters" class="main">
         <div class="content style0">
           <div class="container">
-            <h3>A warm thank you to our supporters</h3>
+            <h3>Read Our Latest Blog Posts</h3>
             <div class="row">
-              <div class="4u 12u(narrow)">
-                <img src="images/sfu.png" width=204 height=152>
+              <div class="person 4u 6u(narrow) 12u(mobile)">
+		<a target="_blank" href="https://breathepublication.com/an-excerpt-from-our-whitepaper-9dedbacf663";>
+			<p>
+                	<img src="https://cdn-images-1.medium.com/max/800/1*xEzDfzPvu-kdXA-gdf4AdQ.jpeg" width=210 height=152 align="middle">
+			<br>An Excerpt from our Whitepaper
+			</p>
+		</a>
               </div>
-              <div class="4u 12u(narrow)">
-                <img src="images/blockchain_ubc.png" width=210 height=152>
+              <div class="person 4u 6u(narrow) 12u(mobile)">
+		<a target="_blank" href="https://medium.com/@mycoralhealth/a-primer-on-personalized-medicine-3dd57afe106e">
+			<p>
+                	<img src="https://cdn-images-1.medium.com/max/800/1*a9m3C_Qs5JEvaI8sP1i-Zw.jpeg" width=210 height=152>
+			<br>A Primer on Personalized Medicine
+			</p>
+		</a>
               </div>
-              <div class="4u 12u(narrow)">
-                <img src="images/fraser_health.png" width=160 height=152>
+              <div class="person 4u 6u(narrow) 12u(mobile)">
+		<a target="_blank" href="https://medium.com/@mycoralhealth/what-part-do-genomics-play-in-personalized-medicine-ab2eb45db107">
+			<p>
+                	<img src="https://cdn-images-1.medium.com/max/800/1*DUMQukjqnCNlZUL6UIfCsw.png" width=210 height=152>
+			<br>Genomics in Personalized Medicine
+			</p>
+		</a>
               </div>
             </div>
           </div>
@@ -231,10 +247,10 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
     <!-- Footer -->
       <section id="footer">
         <ul class="icons">
-          <li><a href="https://github.com/omiccoin" class="icon fa-github"><span class="label">GitHub</span></a></li>
-          <li><a href="https://twitter.com/omiccoin" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-          <li><a href="https://medium.com/@omiccoin" class="icon fa-medium"><span class="label">Medium</span></a></li>
-          <li><a href="mailto:info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+          <li><a href="https://github.com/mycoralhealth" class="icon fa-github"><span class="label">GitHub</span></a></li>
+          <li><a href="https://twitter.com/mycoralhealth" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+          <li><a href="https://medium.com/@mycoralhealth" class="icon fa-medium"><span class="label">Medium</span></a></li>
+          <li><a href="mailto:info@mycoralhealth.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
         <div class="copyright">
           <ul class="menu">
