--- a/index.html
+++ b/index.html
@@ -247,9 +247,10 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
     <!-- Footer -->
       <section id="footer">
         <ul class="icons">
-          <li><a href="https://github.com/mycoralhealth" class="icon fa-github"><span class="label">GitHub</span></a></li>
-          <li><a href="https://twitter.com/mycoralhealth" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-          <li><a href="https://medium.com/@mycoralhealth" class="icon fa-medium"><span class="label">Medium</span></a></li>
+          <li><a target="_blank" href="https://github.com/mycoralhealth" class="icon fa-github"><span class="label">GitHub</span></a></li>
+          <li><a target="_blank" href="https://twitter.com/mycoralhealth" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+          <li><a target="_blank" href="https://medium.com/@mycoralhealth" class="icon fa-medium"><span class="label">Medium</span></a></li>
+          <li><a target="_blank" href="https://www.youtube.com/channel/UC05mX04WdhyBn9ZjqzmetvA/featured" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
           <li><a href="mailto:info@mycoralhealth.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
         <div class="copyright">
