--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Coral Health - Personalized medicine on the blockchain</title>
+    <title>Coral Health - Precision Medicine. Powered By The Blockchain</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="assets/css/featherlight.min.css" type="text/css" rel="stylesheet" />
@@ -27,7 +27,7 @@
     <!-- Header -->
       <section id="header" class="dark">
         <footer>
-          <a href="#lead-section" class="button scrolly">Learn about personalized medicine on the blockchain</a>
+          <a href="#lead-section" class="button scrolly">Learn about personalized medicine on the Blockchain</a>
         </footer>
       </section>
 
@@ -42,7 +42,7 @@
 		<iframe height=220 src="https://www.youtube.com/embed/WUQ_qVe9HGQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		<!-- <br><img src="images/youtube-embed.jpg" width=290 height=170> -->
                 </p>
-                <p><br><br>Fueled by decentralized ledger technologies, Coral Health aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
+                <p><br><br>Fueled by decentralized ledger technologies, Coral Health aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the Blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
 
               </div>
             </div>
