make youtube embedding reflexive

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
               <div class="6u 12u(narrow)">
                 <h1>Our mission is to accelerate the uptake of personalized medicine.</h1>
 		<p style="text-align:center">
-		<iframe height=220 src="https://www.youtube.com/embed/WUQ_qVe9HGQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		<div class="vid-container">
+		<iframe src="https://www.youtube.com/embed/WUQ_qVe9HGQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		<!-- <br><img src="images/youtube-embed.jpg" width=290 height=170> -->
+		</div>
                 </p>
                 <p><br><br>Fueled by decentralized ledger technologies, Coral Health aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the Blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
 
