--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicons/manifest.json">
-    <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicons/manifest.json">
+    <link rel="mask-icon" href="./assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico">
     <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
   </head>
@@ -26,6 +26,20 @@
 
     <!-- Header -->
       <section id="header" class="dark">
+					<!-- Nav -->
+					<nav id="nav" >
+							<ul>
+								<li><a href="#header">Home</a></li>
+								<li><a href="#lead-section">About</a></li>
+								<li><a href="#feature-section">Solutions</a></li>
+								<li><a target="_blank" href="whitepaper.pdf">Whitepaper</a></li>
+								<li><a href="#team-section">Team</a></li>
+								<li><a href="#supporters">Blog</a></li>
+							</ul>
+						</nav>
+
+				</div>
+
         <footer>
           <a href="#lead-section" class="button scrolly">Learn about personalized medicine on the Blockchain</a>
         </footer>
@@ -270,6 +284,5 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
       <script src="assets/js/util.js"></script>
       <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/js/main.js"></script>
-
   </body>
 </html>
