make all nav bar links scrolly

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 					<!-- Nav -->
 					<nav id="nav" >
 							<ul>
-								<li><a href="#header">Home</a></li>
-								<li><a href="#lead-section">About</a></li>
-								<li><a href="#feature-section">Solutions</a></li>
+								<li><a href="#header" class="scrolly">Home</a></li>
+								<li><a href="#lead-section" class="scrolly">About</a></li>
+								<li><a href="#feature-section" class="scrolly">Solutions</a></li>
 								<li><a target="_blank" href="whitepaper.pdf">Whitepaper</a></li>
-								<li><a href="#team-section">Team</a></li>
-								<li><a href="#supporters">Blog</a></li>
+								<li><a href="#team-section" class="scrolly">Team</a></li>
+								<li><a href="#supporters" class="scrolly">Blog</a></li>
 							</ul>
 						</nav>
 
