--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="assets/css/featherlight.min.css" type="text/css" rel="stylesheet" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css?v=0.0.1" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png">
@@ -25,7 +25,7 @@
   <body>
 
     <!-- Header -->
-      <section id="header" class="dark">
+      <section id="header" class="dark" class="scrolly">
 					<!-- Nav -->
 					<nav id="nav" >
 							<ul>
