--- a/index.html
+++ b/index.html
@@ -25,21 +25,18 @@
   <body>
 
     <!-- Header -->
-      <section id="header" class="dark" class="scrolly">
+      <section id="header" class="dark">
 					<!-- Nav -->
-					<nav id="nav" >
+					<nav id="nav">
 							<ul>
 								<li><a href="#header" class="scrolly">Home</a></li>
 								<li><a href="#lead-section" class="scrolly">About</a></li>
 								<li><a href="#feature-section" class="scrolly">Solutions</a></li>
 								<li><a target="_blank" href="whitepaper.pdf">Whitepaper</a></li>
 								<li><a href="#team-section" class="scrolly">Team</a></li>
-								<li><a href="#supporters" class="scrolly">Blog</a></li>
+								<li><a href="#blog" class="scrolly">Blog</a></li>
 							</ul>
-						</nav>
-
-				</div>
-
+					</nav>
         <footer>
           <a href="#lead-section" class="button scrolly">Learn about personalized medicine on the Blockchain</a>
         </footer>
@@ -128,7 +125,7 @@
             <div class="row">
              <div class="12u">
               <footer>
-                <a target="_blank" href="whitepaper.pdf" class="button scrolly"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Read the whitepaper</a>
+                <a target="_blank" href="whitepaper.pdf" class="button scrolly"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Read the Whitepaper</a>
               </footer>
             </div>
            </div>
@@ -226,7 +223,7 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
         </div>
       </section>
 
-      <section id="supporters" class="main">
+      <section id="blog" class="main">
         <div class="content style0">
           <div class="container">
             <h3>Read Our Latest Blog Posts</h3>
