rearranging some people

--- a/index.html
+++ b/index.html
@@ -139,12 +139,6 @@
             <h2>The Team</h2>
             <div class="row">
               <div class="person 4u 6u(narrow) 12u(mobile)">
-                <a href="#" data-featherlight="<p>Jeremy Mullin is a strategist, business development leader, guest speaker, and a trusted expert in the field of strategic insights. Currently he serves as Director, Business Development at Research Now Inc., a global leader in digital data collection, where he advises and supports leading Fortune 1000 enterprises. He is a Certified Marketing Research Professional (CMRP), serves as Board Director and Events Chair for the Toronto Chapter of the Marketing Research and Intelligence Association (MRIA) and is a member of the Data Science Association (DSA).</p>">
-                  <img class="headshot" src="images/people/JeremyMullin.jpg">
-                  <p>Jeremy</p>
-                </a>
-              </div>
-              <div class="person 4u 6u(narrow) 12u(mobile)">
                 <a href="#" data-featherlight="<p>Nikola Grcevski draws upon years of deep technical expertise gained while working in various engineering and leadership positions at IBM. As part of the compiler and runtime technology group, he worked directly with numerous Fortune 500 companies in the financial and online retail industries, helping them achieve scale and drive forward their application performance. Nikola led a team in Toronto and Shanghai focused on Java runtime optimization for the Intel architecture, directing the product performance and shaping future middleware offerings. Nikola has filed thirteen software patents, and has been awarded a high value patent award for his work on runtime memory optimization.</p>">
                   <img class="headshot" src="images/people/Nick.jpg">
                   <p>Nick</p>
@@ -189,6 +183,12 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
                 </a>
               </div>
               <div class="person 4u 6u(narrow) 12u(mobile)">
+                <a href="#" data-featherlight="<p>Jeremy Mullin is a strategist, business development leader, guest speaker, and a trusted expert in the field of strategic insights. Currently he serves as Director, Business Development at Research Now Inc., a global leader in digital data collection, where he advises and supports leading Fortune 1000 enterprises. He is a Certified Marketing Research Professional (CMRP), serves as Board Director and Events Chair for the Toronto Chapter of the Marketing Research and Intelligence Association (MRIA) and is a member of the Data Science Association (DSA).</p>">
+                  <img class="headshot" src="images/people/JeremyMullin.jpg">
+                  <p>Jeremy Mullin</p>
+                </a>
+              </div>
+              <div class="person 4u 6u(narrow) 12u(mobile)">
                 <a href="#" data-featherlight="<p>Allan Mah is a research and business professional with over a decade of experience in biomedical research, market analysis and biotech with a well-rounded portfolio of managing, executing and evaluating numerous product launches, marketing projects, programs and campaigns. He has pioneered research identifying the transcription factor that causes silencing of aquaporin gene expression using the C. elegans model through the Dr. David Baillie lab at Simon Fraser University.</p>">
                   <img class="headshot" src="images/people/AllanMah.jpg">
                   <p>Allan Mah, PhD</p>
@@ -204,12 +204,6 @@ developer of a Laboratory Information Management System (LIMS) used to manage pr
                 <a href="#" data-featherlight="<p>Daniel Bacinello is a manager of research and business development at Ontario Genomics. In this role, he provides management support to funded research projects and works with academic and industry partners in developing strong funding applications for large-scale genomics research. Daniel earned his PhD in Nanotechnology jointly from the University of Waterloo and the University of Bordeaux, focusing on the development of hybrid polymer-peptide nano-vesicles for tumor-targeted drug delivery.</p>">
                   <img class="headshot" src="images/people/DanielBacinello.jpg">
                   <p>Daniel Bacinello, PhD</p>
-                </a>
-              </div>
-              <div class="person 4u 6u(narrow) 12u(mobile)">
-                <a href="#" data-featherlight="<p>Jared Bowie has been designing systems to coordinate distributed databases and peer to peer networks for more than 10 years. Jared graduated from James Madison University with a major in philosophy. After graduation, obsessed with the convergence of big data and display advertising, he started his first digital advertising venture. Since then, Jared has written specialized software and proprietary algorithms to run successful multimillion dollar ad campaigns and manage remote teams based in Hong Kong, mainland China and India.</p>">
-                  <img class="headshot" src="images/people/JaredBowie.jpg">
-                  <p>Jared Bowie</p>
                 </a>
               </div>
               <div class="person 4u 6u(narrow) 12u(mobile)">
